tests/samples/block-undefined/template.blate
// error: lorem
{@lorem}
    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
{/lorem}
